home and details functional

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,1 +1,14 @@
-<p>details works!</p>
+<div class="Details">
+  <div class="Details-loading" *ngIf="isLoading else content">
+    <p>Loading...</p>
+  </div>
+  <ng-template #content>
+    <div class="Details-content" *ngIf="repository && repository.owner">
+      <img [src]="repository.owner.avatarUrl" alt="Avatar" class="avatar">
+      <h1> {{ repository.name}} </h1>
+      <h2>by {{ repository.owner.name}} </h2>
+      <p *ngIf="repository.description"> {{ repository.description}}</p>
+      <h4> {{repository.starsCount}} <i class="fas fa-star"></i></h4>
+    </div>
+  </ng-template>
+</div>
