--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-body, button {
+/* Basic reset for cross browser */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+
+body {
+  height: 100%;
+  font-weight: 400;
+  font-size: 1.6rem; /* In case the browser default font-size isn't 16px */
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
 
+button, input {
+  font-size: 1.6rem;
+  font-family: 'Roboto', sans-serif;
+}
