--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 /* Basic reset for cross browser */
 *,
@@ -19,10 +19,10 @@ body {
   font-weight: 400;
   font-size: 1.6rem; /* In case the browser default font-size isn't 16px */
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 button, input {
   font-size: 1.6rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
