settings css and form validations

--- a/src/app/shared/shared-styles.scss
+++ b/src/app/shared/shared-styles.scss
@@ -1,7 +1,9 @@
+// Variables
 $sl-color-dark-grey: rgb(22, 27, 34);
 $sl-color-dark-grey-active: rgba(22, 27, 34, 0.7);
 $sl-color-light-grey: rgb(240, 246, 252);
 $sl-color-light-grey-active: rgba(240, 246, 252, 0.7);
+$sl-color-error: #B00020;
 $sl-content-spacing: 1.5rem;
 $sl-content-spacing-small: 0.5rem;
 
