--- a/src/app/settings/components/settings.component.scss
+++ b/src/app/settings/components/settings.component.scss
@@ -1,44 +1,82 @@
+@import '../../shared/shared-styles';
+
 .Settings {
 
   &-header {
+    background-color: $sl-color-dark-grey;
+    color: $sl-color-light-grey;
     text-align: center;
+    padding: $sl-content-spacing;
 
     button.backButton {
-      font-size: 24px;
-      border: none;
-      background: none;
-      cursor: pointer;
+      font-size: 2.4rem;
+      @include iconButton();
       float: left;
     }
 
     h1 {
+      font-size: 2.4rem;
       text-align: center;
     }
   }
 
   &-container {
     margin: 0 auto;
-    width: 350px;
+    padding-top: $sl-content-spacing;
+    width: 35rem;
 
     & > div.row {
-      margin-bottom: 16px;
+      padding-bottom: $sl-content-spacing;
 
       label {
         display: inline-block;
-        width: 150px;
+        width: 15rem;
       }
 
       input {
         display: inline-block;
         float: right;
-        width: 150px;
+        width: 15rem;
+        padding: 0 $sl-content-spacing-small;
       }
+    }
+
+    .errors {
+      color: $sl-color-error;
+      font-size: 1.4rem;
     }
 
     button {
       display: block;
       width: 100%;
-      font-size: 1em;
+      cursor: pointer;
+      padding: $sl-content-spacing-small $sl-content-spacing;
+      font-weight: 500;
+
+      &.saveButton {
+        background-color: $sl-color-dark-grey;
+        color: $sl-color-light-grey;
+        margin-bottom: $sl-content-spacing-small * 2;
+        border: none;
+
+        &:hover {
+          background-color: $sl-color-dark-grey-active;
+        }
+
+        &[disabled] {
+          background: $sl-color-error;
+        }
+      }
+
+      &.resetButton {
+        color: $sl-color-dark-grey;
+        background-color: $sl-color-light-grey;
+        border: 0.1rem solid $sl-color-dark-grey;
+
+        &:hover {
+          background-color: $sl-color-light-grey-active;
+        }
+      }
     }
   }
 }
