--- a/src/app/settings/components/settings.component.scss
+++ b/src/app/settings/components/settings.component.scss
@@ -25,7 +25,7 @@
     padding-top: $sl-content-spacing;
     width: 35rem;
 
-    & > div.row {
+    &-row {
       padding-bottom: $sl-content-spacing;
 
       label {
@@ -41,7 +41,7 @@
       }
     }
 
-    .errors {
+    &-errors {
       color: $sl-color-error;
       font-size: 1.4rem;
     }
